styles.css
@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Math&display=swap');


* {
    box-sizing: border-box;
    transition: 0.3s;
}

html, body {
    height: 100%;
    margin: 0;
}

html, body, .calculator, .key {
    transition: 0.5s;
}

body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

/* THEME SWITCHER CSS */

.theme-switches {
    display: flex;
    justify-content: center;
}
.switch {
  border: 2px solid black;
  border-radius: 50px;
  height: 30px;
  width: 30px;
  margin: 10px;
  cursor: pointer;
}

.switch:hover {
  transform: scale(1.2);
  transition: 0.3s ease-in-out;
}

#switch-1 {
  background-color: #fff;
}

#switch-2 {
  background-color: #000;
}

#switch-3 {
  background-color: #ff00ea;
}

#switch-4 {
    border-radius: 0;
    background-color: black;
}
/* CALCULATOR - DISPLAY CSS */

.calculator {
    width: 400px;
    height: 655px;
    border-radius: 5px;
    padding: 5px;
    padding-top: 25px;
    display: flex;
    flex-flow: column;
}

.display-box {
    height: 30px;
    width: auto;
    max-width: calc(100% - 35px);
    border-radius: 3px 3px 0px 0px;
    margin: 0 25px 0px 10px;

    align-self: flex-end;
    display: flex;
    flex-wrap: nowrap;
    justify-content: flex-end;
    align-items: center;
}
.display-box p {
    overflow: auto;
    scrollbar-color: #999999  #333333;
    scrollbar-width: thin;

    padding: 0 5px;
    margin: 0;
    font-size: 20px;
    font-family: 'Orbitron', 'Noto Sans Math', sans-serif;
    white-space: nowrap;
}

.display {
    margin: 0 10px 10px 10px;
    width: calc(100% - 20px);
    height: 100px;
    border-radius: 5px;
    background-color: #333333;

    display: flex;
    flex-wrap: nowrap;

    justify-content: flex-end;
    overflow: hidden;
    align-items: center;
}

.display p {
    font-size: 65px;
    font-family: 'Orbitron', 'Noto Sans Math', sans-serif;

    padding-right: 10px;
    display: inline-block;
    overflow-x: auto;
    overflow-y: hidden;
    white-space: nowrap; /* Prevent wrapping to new lines */
}


/* Firefox Scrollbar Options */
@-moz-document url-prefix() {
    .display p {
    scrollbar-color: #999999  #333333;
    scrollbar-width: thin;
    }
}

/* Other browsers Scrollbar Options */
.display p::-webkit-scrollbar {
    height: 10px;
    background: #333333;
}
.display p::-webkit-scrollbar-thumb {
    background: #999999;
}
.display p:hover::-webkit-scrollbar-thumb {
    background: #7f7f7f;
}
.display p:active::-webkit-scrollbar-thumb {
    background: #d9d9d9;
}

/* CALCULATOR - KEYS CSS */


.keys-container {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: space-around;
    margin: 10px;

    height: 100%;
}

.row {
    width: 100%;
    height: calc(16.6% - 5px);
    margin: 5px 0 0 0;

    display: flex;
    gap: 5px;
}

.key, .double-key {
    cursor: pointer;
}

